<resources>
    <string name="app_name">Calculatrice</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="vider">C</string>
    <string name="historique">H</string>
    <string name="effacer">↩</string>
    <string name="resolution">=</string>
    <string name="addition">+</string>
    <string name="soustraction">−</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="virgule">,</string>
    <string name="vider_historique">Vider</string>
    <string name="titre_historique">Historique</string>
    <string name="calcul_id">calcul</string>
    <string name="selection_start_id">selection start</string>
    <string name="selection_end_id">selection end</string>
    <string name="resultat_id">resultat</string>
    <string name="layout_actuel_id">layout actuel</string>
    <string name="erreur_calcul">Erreur</string>
</resources>
